apps/kavita/kavita-smb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita-smb
  namespace: kavita
spec:
  type: NodePort
  selector:
    app: kavita-smb
  ports:
    - port: 445
      targetPort: 445
      nodePort: 32445
      name: smb
