apps/kavita/kavita-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    th3borg.org/apps-portal: "true"
    th3borg.org/apps-name: "Kavita"
    th3borg.org/apps-description: "Kavita is a personal library with a pre-curated selection of books. Contact FreyaAX400 if you would like to request additions."
  name: kavita-ingress
  namespace: kavita
spec:
  ingressClassName: nginx
  rules:
    - host: kavita.th3borg.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kavita
                port:
                  number: 5000
